force-app/main/default/objects/Workflow__c/Workflow__c.object-meta.xml
<CustomObject>
    <description>Automation workflow triggered by booking lifecycle events</description>
    <label>Scheduling Workflow</label>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Workflows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>