force-app/main/default/objects/Workflow__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional: limit workflow to a specific event type (null = all event types)</description>
    <label>Event Type</label>
    <referenceTo>Event_Type__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>