force-app/main/default/objects/Workflow__c/fields/Time_Offset_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Offset_Minutes__c</fullName>
    <description>Minutes before/after event to trigger (for Before_Event/After_Event types)</description>
    <label>Time Offset (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>