force-app/main/default/objects/Workflow__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Before_Event</fullName><default>false</default><label>Before Event</label></value>
            <value><fullName>After_Event</fullName><default>false</default><label>After Event</label></value>
            <value><fullName>New_Booking</fullName><default>true</default><label>New Booking</label></value>
            <value><fullName>Booking_Cancelled</fullName><default>false</default><label>Booking Cancelled</label></value>
            <value><fullName>Booking_Rescheduled</fullName><default>false</default><label>Booking Rescheduled</label></value>
            <value><fullName>Booking_Confirmed</fullName><default>false</default><label>Booking Confirmed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>